templates/assets/fonts/icomoon/style.css
@font-face {
  font-family: 'icomoon';
  src:  url('fonts/icomoon.eot?jkga3h');
  src:  url('fonts/icomoon.eot?jkga3h#iefix') format('embedded-opentype'),
    url('fonts/icomoon.ttf?jkga3h') format('truetype'),
    url('fonts/icomoon.woff?jkga3h') format('woff'),
    url('fonts/icomoon.svg?jkga3h#icomoon') format('svg');
  font-weight: normal;
  font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'icomoon' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.icon-edit:before {
  content: "\e911";
}
.icon-box-down:before {
  content: "\e912";
}
.icon-delete:before {
  content: "\e910";
}
.icon-filters:before {
  content: "\e90f";
}
.icon-select:before {
  content: "\e90e";
}
.icon-cancel:before {
  content: "\e90d";
}
.icon-gallery:before {
  content: "\e900";
}
.icon-group:before {
  content: "\e901";
}
.icon-image:before {
  content: "\e902";
}
.icon-navigation:before {
  content: "\e903";
}
.icon-notification:before {
  content: "\e904";
}
.icon-page:before {
  content: "\e905";
}
.icon-pages:before {
  content: "\e906";
}
.icon-permission:before {
  content: "\e907";
}
.icon-redirect:before {
  content: "\e908";
}
.icon-search:before {
  content: "\e909";
}
.icon-settings:before {
  content: "\e90a";
}
.icon-user:before {
  content: "\e90b";
}
.icon-video:before {
  content: "\e90c";
}

